fixed footer alignment

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -599,14 +599,14 @@ footer {
 
 
     .footerContainer {
-        width: 80%;
+        width: 100%;
         margin: 1.5rem auto;
         text-align: center;
         justify-content: center;
         color: #FFFFFF;
 
         .footerTop {
-            display: flex flex;
+            display: flex;
 
             a {
                 color: #FFFFFF;
@@ -632,7 +632,7 @@ footer {
             justify-items: center;
             justify-content: center;
             color: #FFFFFF;
-            margin-left: 15%;
+            margin-left: 0%;
 
             .supportOptionsItem {
                 width: 10rem;
